Fix font wrapping

--- a/src/stylesheets/header.less
+++ b/src/stylesheets/header.less
@@ -19,6 +19,12 @@ h1 {
   text-align: center;
 }
 
+@media (max-width: 460px) {
+  .navbar-brand {
+    font-size: 25px;
+  }
+}
+
 .navbar-brand:hover {
   color: @yellow;
 }
